# xsar_grd

./: .gitignore  .gitignore.swp  README.md  pixi.toml  pyproject.toml  sar_env_export.yaml
scripts/: add_sarwind.py  note.md  produce_L1B_from_L1GRD.py  produce_L1C_from_L1B.py
src/xsargrd/: __init__.py  config.py  config.yaml  l1b_config.yaml  l1c_config.yaml
src/xsargrd/l1b/: cwave.py  generate.py  scatt.py  spectra.py  tools.py
src/xsargrd/l1c/: ancillaries.py  coloc.py  generate.py  pipeline.py  raster_readers.py  sarwind.py  tools.py
test/: produce_L1B.ipynb  produce_L1C.ipynb
